--- a/app/public/login.html
+++ b/app/public/login.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robinowitz Login</title>
 
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/nils-simons/robinowitz/main/app/public/favicon.ico?token=GHSAT0AAAAAACFVZJEBEPBTNMU4XWKI4NPIZGFH3FA" type="image/x-icon">
+
+
     <!-- CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
