--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robinowitz</title>
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/nils-simons/robinowitz/main/app/public/favicon.ico?token=GHSAT0AAAAAACFVZJEBEPBTNMU4XWKI4NPIZGFH3FA" type="image/x-icon">
 
 
     <!-- CSS -->
